--- a/BirthdayCake.html
+++ b/BirthdayCake.html
@@ -255,7 +255,7 @@
         />
       </svg>
     </div>
-    <div class="name">Quỳnh Phương</div>
+    <div class="name">Nguyễn Thu Uyên</div>
     <div class="happy">
       <img src="img/HappyBirthday.png" />
     </div>
