--- a/img.html
+++ b/img.html
@@ -13,13 +13,14 @@
     <div class="container">
       <ul class="img-ul">
         <li class="img-li">
-          <img src="/img/anh 1.jpg" alt="" />
+          <img src="/img/anh1.jpg" alt="" />
         </li>
         <li class="img-li"><img src="/img/anh2.jpg" alt="" /></li>
         <li class="img-li"><img src="/img/anh3.jpg" alt="" /></li>
         <li class="img-li"><img src="/img/anh4.jpg" alt="" /></li>
         <li class="img-li"><img src="/img/anh5.jpg" alt="" /></li>
         <li class="img-li"><img src="/img/anh6.jpg" alt="" /></li>
+        <li class="img-li"><img src="/img/anh7.jpg" alt="" /></li>
       </ul>
     </div>
     <div class="htmleaf-container">
